[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/fontawesome-free-5.15.4-desktop/otfs/Font Awesome 5 Free-Regular-400.otf" type="DynamicFontData" id=1]
[ext_resource path="res://src/QuestionnaireConfiguration/Alarms/AlarmBox.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="AlarmBox" type="PanelContainer"]
margin_right = 1024.0
margin_bottom = 114.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 107.0

[node name="DeleteButton" type="Button" parent="VBoxContainer"]
margin_left = 982.0
margin_right = 1010.0
margin_bottom = 22.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 1 )
text = "ÔÅó"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 1010.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 69.0
margin_bottom = 19.0
text = "Start Time:"

[node name="HourBox" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 73.0
margin_right = 147.0
margin_bottom = 24.0
max_value = 23.0
suffix = "h"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinuteBox" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 151.0
margin_right = 225.0
margin_bottom = 24.0
max_value = 59.0
suffix = "m"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 1010.0
margin_bottom = 78.0

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 59.0
margin_bottom = 19.0
text = "Duration:"

[node name="DurationBox" type="SpinBox" parent="VBoxContainer/HBoxContainer2"]
margin_left = 63.0
margin_right = 137.0
margin_bottom = 24.0
allow_greater = true
suffix = "m"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 141.0
margin_top = 5.0
margin_right = 191.0
margin_bottom = 19.0
text = "  Expiry:"

[node name="ExpiryBox" type="SpinBox" parent="VBoxContainer/HBoxContainer2"]
margin_left = 195.0
margin_right = 269.0
margin_bottom = 24.0
allow_greater = true
suffix = "m"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 273.0
margin_top = 5.0
margin_right = 336.0
margin_bottom = 19.0
text = "  Repeats:"

[node name="RepeatBox" type="SpinBox" parent="VBoxContainer/HBoxContainer2"]
margin_left = 340.0
margin_right = 414.0
margin_bottom = 24.0
allow_greater = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 82.0
margin_right = 1010.0
margin_bottom = 82.0

[node name="InfoLabel" type="Label" parent="VBoxContainer"]
margin_top = 86.0
margin_right = 1010.0
margin_bottom = 100.0

[connection signal="pressed" from="VBoxContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/HourBox" to="." method="_on_AlarmBox_value_changed" binds= [ "Hour" ]]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/MinuteBox" to="." method="_on_AlarmBox_value_changed" binds= [ "Minute" ]]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/DurationBox" to="." method="_on_AlarmBox_value_changed" binds= [ "duration" ]]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/ExpiryBox" to="." method="_on_AlarmBox_value_changed" binds= [ "expiry" ]]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/RepeatBox" to="." method="_on_AlarmBox_value_changed" binds= [ "repeat" ]]
